--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@
         </div>
     </div>
 
-<script type="text/javascript" src="./main.js"></script></body>
+<script type="text/javascript" src="main.js"></script></body>
 </html>
